--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^7.6.2",
+    "mongoose": "4.13.21",
     "mongoose-auto-increment": "^5.0.1"
   }
 }
